syntax = "proto3";
option go_package = "uploader/proto/monitor;pb_monitor";
package monitor;

message FileServerReq {
  string md5 = 1;
}

message FileServerResp {
  string md5 = 1;
  string dns = 2;
  int32  errCode = 3;
  string errMsg = 4;
}

service monitor {
  rpc GetFileServer(FileServerReq) returns(FileServerResp);
}

